# c-keyboard-backlight

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: keyboard.h  keyboard_backlight.h  keyboard_backlight_internal.h  sysfs_utils.h
src/: kb_xps_9350.c  keyboard.c  keyboard_backlight.c  main.c  sysfs_utils.c
